Fix for progress status alignment

--- a/_sass/layouts/_goal-with-progress.scss
+++ b/_sass/layouts/_goal-with-progress.scss
@@ -52,8 +52,6 @@ $goal-by-target-indentation: 60px;
         width: 25%;
       }
       .progress-status {
-        max-width: 75%;
-        float: right;
         margin-top: 0;
       }
     }
